<resources>
    <string name="app_name">Cadastro</string>
    <string name="titulo_app">Cadastro</string>
    <string name="nome_completo">Nome completo</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="ingresar_na_lista_de_e_mails">Ingresar na lista de e-mails?</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="phone_exemple">Ex: 000000-0000</string>

    <string-array name="estados_brasileiros">
        <item>AC</item>
        <item>RJ</item>
        <item>SP</item>
        <item>MG</item>
        <item>BA</item>
    </string-array>
</resources>