<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cabeca"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/cabecalho"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nomeCompletoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:textSize="20sp"
        android:layout_marginTop="45sp"
        app:layout_constraintTop_toTopOf="@+id/cabeca" />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toTopOf="@+id/nomeCompletoText" />

    <TextView
        android:id="@+id/telefoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="20sp"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toTopOf="@+id/inputNome" />

    <EditText
        android:id="@+id/inputTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:hint="@string/Exemplo_telefone"
        app:layout_constraintTop_toTopOf="@+id/telefoneText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxText"
        android:layout_marginTop="40sp"
        app:layout_constraintTop_toTopOf="@+id/inputTelefone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="20sp"
        android:layout_marginTop = "50sp"
        app:layout_constraintTop_toTopOf="@+id/checkBox"
        tools:ignore="MissingConstraints" />


    <RadioGroup
        android:id="@+id/Rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@+id/sexo">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />
    </RadioGroup>

    <TextView
        android:id="@+id/textCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:textSize="20sp"
        android:layout_marginTop="100sp"
        app:layout_constraintTop_toTopOf="@+id/Rg"/>

    <EditText
        android:id="@+id/inputCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toTopOf="@+id/textCidade" />

    <TextView
        android:id="@+id/textUf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@+id/inputCidade" />

    <EditText
        android:id="@+id/inputUf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toTopOf="@+id/textUf" />

    <Button
        android:id="@+id/Bsalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/salvar"
        app:layout_constraintTop_toTopOf="@id/inputUf"
        tools:layout_editor_absoluteX="63dp" />

    <Button
        android:id="@+id/Blimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/limpar"
        app:layout_constraintTop_toTopOf="@id/inputUf"
        tools:layout_editor_absoluteX="255dp" />


</androidx.constraintlayout.widget.ConstraintLayout>